tests/sema/golden/21_unary_plus_str.out
tests/sema/bad/21_unary_plus_str.sg:3:15: error: unary '+' expects int or float, got string
    let x:int = +s;
                ^
